<resources>
    <string name="app_name">WeCollabs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">Icon</string>
    <string name="we_collabs">We Collabs</string>
    <string name="welcome">welcome</string>
    <string name="welcome_title_1">Get Latest Event \nInformation Easily</string>
    <string name="welcome_title_2">We provide information about the latest events that you can get with this app</string>
    <string name="continue_as">Continue as</string>
    <string name="user">User</string>
    <string name="organization">Organization</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="choose_image">Choose Image</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="organization_name">Organization name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="address_coordinate">Address coordinate</string>
    <string name="select_date">Select Date</string>

    <!--ERROR MESSAGE-->
    <string name="error_email_format">Email\'s format invalid</string>
    <string name="error_email_input">Please fill your email</string>
    <string name="error_password_input">Password at least have 6 characters</string>
    <string name="error_confirm_password_input">Password wrong !</string>
    <string name="error_username_input">Please fill your name</string>
    <string name="error_selectedDate_input">Please select your date of birth</string>
    <string name="error_gender_input">Please select your gender</string>
    <string name="error_phone_number_input">Please fill your phone number</string>
    <string name="error_required_field">This field is required</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="discover_amazing_event">Discover Amazing Event</string>
    <string name="find_event">Find event</string>
    <string name="on_trending">On Trending</string>
    <string name="see_more">See more</string>
    <string name="logout">Logout</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="articles">Articles</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="events">Events</string>
    <string name="title_activity_detail_event">DetailEventActivity</string>
    <string name="detail">Detail</string>
    <string name="read_more">Read more</string>
    <string name="clock">clock</string>
    <string name="location">Location</string>
    <string name="contact_organization">Contact Organization</string>
    <string name="detail_organization">Detail Organization</string>
    <string name="contact">Contact</string>
    <string name="next">Next</string>
    <string name="error_input_address">Please fill your address</string>
    <string name="error_select_coordinate">Please select your address coordinate</string>
    <string name="title_chooselocation">Choose Location</string>
    <string name="title_organizationpanel">Organization Panel</string>
    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <string name="choose_your_organization_goal">Choose your organization goal</string>
    <string name="submit">Submit</string>
    <string name="title_activity_organization_panel">OrganizationPanelActivity</string>
    <string name="you_don_t_have_a_favorite_event_yet">You don\'t have any favorite event yet</string>
    <string name="not_found">Not found</string>
    <string name="programs">Programs</string>
    <string name="article_image">Article Image</string>
    <string name="you_dont_have_any_notification_yet">You dont have any notification yet</string>
    <string name="goals">Goals</string>
    <string name="title_showimage">Show Image</string>
</resources>