<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.start.fragments.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="22dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon"
        android:adjustViewBounds="true"
        android:layout_marginTop="2dp"
        android:src="@drawable/we_collab_biru"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:fontFamily="@font/be_vietnam_pro_bold"
        android:text="@string/we_collabs"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/welcome"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="@font/be_vietnam_pro_bold"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_big_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/loginTypeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_small_margin"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/be_vietnam_pro_regular"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:text="( User )" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="@dimen/min_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/min_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/min_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/min_corner_radius"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/primary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="@dimen/min_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/min_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/min_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/min_corner_radius"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/primary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_regular"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/be_vietnam_pro_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <include
        android:id="@+id/loginLoadingBtn"
        layout="@layout/button_loading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/grey2"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_regular"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin"
            android:fontFamily="@font/be_vietnam_pro_bold"
            android:text="@string/register"
            android:textColor="@color/primary_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>